fix div issue so image and text align next to eachother

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,12 @@ main {
 footer {
     background-color: rgb(225, 240, 247);
 }
-#open {
-    display:inline;
-    width:100%;
+.open {
+    display:flex;
+    }
+.item {
+    flex: 1;
+    margin: 10px;
 }
 #homepage {
     display: flex;
